# fork-sample

./: README.md  sample.md
.github/workflows/: create-pr.yml  main.yml
zip_location/: pyproject.toml
zip_location/zip_location/: script.py
