[tool.poetry]
name = "zip_location"
version = "0.1.0"
description = ""
authors = ["takahoh <takaho.hayashi@salesforce.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "./zip_location/script:main"
